--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -33,9 +33,8 @@
   ],
   "host_permissions": [
     "*://*.amazon.com/*",
-    "*://*.walmart.com/*",
-    "*://*.target.com/*",
-    "*://*.ebay.com/*"
+    "*://*.amazon.in/*"
+    
   ],
   "background": {
     "service_worker": "background.js",
@@ -45,9 +44,8 @@
     {
       "matches": [
         "*://*.amazon.com/*",
-        "*://*.walmart.com/*",
-        "*://*.target.com/*",
-        "*://*.ebay.com/*"
+        "*://*.amazon.in/*"
+       
       ],
       "js": [
         "contentScript.js"
